
NACL_EXPORT = \
	nacl/crypto_auth_hmacsha256.h \
	nacl/crypto_auth_hmacsha512256.h \
	nacl/crypto_box.h \
	nacl/crypto_box_curve25519xsalsa20poly1305.h \
	nacl/crypto_core_hsalsa20.h \
	nacl/crypto_core_salsa20.h \
	nacl/crypto_core_salsa2012.h \
	nacl/crypto_core_salsa208.h \
	nacl/crypto_hash_sha256.h \
	nacl/crypto_hash_sha512.h \
	nacl/crypto_hashblocks_sha256.h \
	nacl/crypto_hashblocks_sha512.h \
	nacl/crypto_onetimeauth_poly1305.h \
	nacl/crypto_scalarmult_curve25519.h \
	nacl/crypto_secretbox_xsalsa20poly1305.h \
	nacl/crypto_sign_ed25519.h \
	nacl/crypto_sign_edwards25519sha512batch.h \
	nacl/crypto_stream_aes128ctr.h \
	nacl/crypto_stream_salsa20.h \
	nacl/crypto_stream_salsa2012.h \
	nacl/crypto_stream_salsa208.h \
	nacl/crypto_stream_xsalsa20.h \
	nacl/crypto_uint16.h \
	nacl/crypto_uint32.h \
	nacl/crypto_uint64.h \
	nacl/crypto_uint8.h \
	nacl/crypto_verify_16.h \
	nacl/crypto_verify_32.h \
	nacl/randombytes.h

EXTRA_SRC = $(NACL_EXPORT) \
	nacl/version.h.in

nobase_include_HEADERS = $(NACL_EXPORT)
